feat: ajustado as chamadas para o banco
